# clipmdplus

./: Cargo.toml  LICENSE  README.md  clipmdplus.code-workspace
.github/workflows/: rust.yml
.ignore/: enum_name..rs  main_native.txt  private_derive_name_trait.rs  rust-toolchain.toml
.ignore/pub_derive_name_trait/: mod.rs  test_derive_name_trait.rs
.ignore/src - Copy/: Notes.md  clip_form.rs  lib.rs  macros.rs  main.rs  stdmd.rs
.ignore/src - Copy/clip_util/: format.rs  i_data_object.rs
.ignore/src - Copy/macros/: derive_name.rs  derive_name_macros.rs  serde_enum_local.rs
.ignore/src - Copy/stdmd/: app_error_data.rs
.ignore/src - Copy/stdmd/date_std/: mod.rs
.ignore/testsFromClipmdplusMacro/: lib.rs  name.rs  test_derive_name_trait.rs  variant_name.rs
clipmdplus/: Cargo.toml
clipmdplus/docs/: cargo.toml
clipmdplus/docs/src/: main.rs
clipmdplus/src/: Notes.md  derive_name.rs  lib.rs  main.rs  stdmd.rs
clipmdplus/src/clip_form/: mod.rs
clipmdplus/src/clip_form/egui/: mod.rs  native.rs  web.rs
clipmdplus/src/clip_form/egui/native/: clip_form_native.rs  clip_form_window_native.rs  window_options_native.rs
clipmdplus/src/clip_form/egui/web/: form_app_web.txt
clipmdplus/src/clip_util/: clip_meta.rs  i_data_object.rs  mod.rs
clipmdplus/src/stdmd/: app_error.rs  app_error_data.rs  db_api.rs
clipmdplus/src/stdmd/date_std/: mod.rs
clipmdplus/src/stdmd/hyperlink/: mod.rs
clipmdplus/src/stdmd/types/: mod.rs  range.rs  sequence.rs  type_form.rs  type_format.rs
clipmdplus_library/: Cargo.toml
clipmdplus_library/src/: derive_name_trait.rs  lib.rs
clipmdplus_macro/: Cargo.toml
clipmdplus_macro/src/: derive_name.rs  lib.rs  serde_enum.rs
clipmdplusmacro/: Cargo.toml
clipmdplusmacro/src/: derive_name_local.rs  macro.rs  serde_enum_local.rs
derive_more/: Cargo.toml  README.md
derive_more/extension/: modules.rs
derive_more/src/: add_like.rs  lib.rs
derive_more/tests/error/: derives_for_enums_with_source.rs  derives_for_generic_enums_with_source.rs  derives_for_generic_structs_with_source.rs  derives_for_structs_with_source.rs
doc20230827/: Mdm Standard Object and Type Prefixes Vs10_0.txt  Mdm1Oss1Mclipboard1 Features ToAdd.txt  crates.js  help.html  settings.html  source-files.js
doc20230827/clipboard_win/: all.html  fn.get.html  fn.get_clipboard.html  fn.get_clipboard_string.html  fn.set.html  fn.set_clipboard.html  fn.set_clipboard_string.html  fn.with_clipboard.html  fn.with_clipboard_attempts.html  index.html  sidebar-items.js  struct.Clipboard.html  trait.Getter.html  trait.Setter.html  type.SysResult.html  type.SystemError.html
doc20230827/clipboard_win/formats/: constant.CF_BITMAP.html  constant.CF_DIB.html  constant.CF_DIBV5.html  constant.CF_DIF.html  constant.CF_DSPBITMAP.html  constant.CF_DSPENHMETAFILE.html  constant.CF_DSPMETAFILEPICT.html  constant.CF_DSPTEXT.html  constant.CF_ENHMETAFILE.html  constant.CF_GDIOBJFIRST.html  constant.CF_GDIOBJLAST.html  constant.CF_HDROP.html  constant.CF_LOCALE.html  constant.CF_METAFILEPICT.html  constant.CF_OEMTEXT.html  constant.CF_OWNERDISPLAY.html  constant.CF_PALETTE.html  constant.CF_PENDATA.html  constant.CF_PRIVATEFIRST.html  constant.CF_PRIVATELAST.html  constant.CF_RIFF.html  constant.CF_SYLK.html  constant.CF_TEXT.html  constant.CF_TIFF.html  constant.CF_UNICODETEXT.html  constant.CF_WAVE.html  index.html  sidebar-items.js  struct.Bitmap.html  struct.FileList.html  struct.RawData.html  struct.Unicode.html
doc20230827/clipboard_win/raw/: fn.close.html  fn.count_formats.html  fn.empty.html  fn.format_name.html  fn.format_name_big.html  fn.get.html  fn.get_bitmap.html  fn.get_clipboard_data.html  fn.get_file_list.html  fn.get_owner.html  fn.get_string.html  fn.get_vec.html  fn.is_format_avail.html  fn.open.html  fn.open_for.html  fn.register_format.html  fn.register_raw_format.html  fn.seq_num.html  fn.set.html  fn.set_bitmap.html  fn.set_file_list.html  fn.set_string.html  fn.set_without_clear.html  fn.size.html  fn.size_unsafe.html  index.html  sidebar-items.js  struct.EnumFormats.html
doc20230827/clipmdplus/: all.html  derive.Deserialize_enum.html  derive.Name.html  derive.Serialize_enum.html  derive.VariantName.html  fn.main.html  index.html  sidebar-items.js
doc20230827/clipmdplus/clip_form/: index.html  sidebar-items.js  struct.ClipForm.html
doc20230827/clipmdplus/clip_util/: enum.Message.html  index.html  sidebar-items.js  struct.ClipMeta.html  struct.ClipboardHistory.html  struct.ClipboardMeta.html  struct.DoSerial.html  struct.IDataObject.html  struct.ProgControl.html
doc20230827/clipmdplus/stdmd/: index.html  sidebar-items.js
doc20230827/clipmdplus_lib/: all.html  index.html
doc20230827/clipmdplus_library/: all.html  fn.imafunc.html  fn.imafunc2.html  index.html  sidebar-items.js
doc20230827/clipmdplus_macro/: all.html  derive.Deserialize_enum.html  derive.Name.html  derive.NamingStyle.html  derive.Serialize_enum.html  derive.ToString.html  derive.VariantName.html  index.html  sidebar-items.js
doc20230827/derive_more/: index.html
docs/: Cargo.toml
docs/src/: main.rs
project_admin/: .~lock.Builds crashing 2 - win lib - ide issues..odt#  .~lock.Mdm ClipMdPlus Project Management.xlsx#  Builds crashing 2 - win lib - ide issues..odt  Mdm ClipMdPlus Dgh Questions.xlsx  Mdm ClipMdPlus Project Management.xlsx  Thumbs.db
script/: clipmd_param.old  doc_crate_create.txt
script/postgres/: clipmd_create.sql  clipmd_create_db.sql  clipmd_create_index.sql  clipmd_create_role.sql  clipmd_create_table.sql  clipmd_create_tablespace.sql  clipmd_create_tablespace_defaults.sql  clipmd_drop_db.sql  clipmd_drop_index.sql  clipmd_drop_role.sql  clipmd_drop_table.sql  clipmd_find_data_dir.sql  clipmd_find_db.sql  clipmd_find_db_size.sql  clipmd_find_session.sql  clipmd_kill_user_session.sql  clipmd_list_db.sql  clipmd_sequence.sql  postgresql.conf
src/: clip_form.rs  main.rs  stdmd.rs
src/clip_form/egui/: native.rs
src/clip_util/: clip_meta.rs  format.rs  i_data_object.rs  mod.rs
src/stdmd/: db_api.rs  range.rs  sequence.rs  type_form.rs  types.rs
(+71 files in other folders)
