[workspace]
members = [
    "clipmdplus", 
    "clipmdplusmacro"
]

[workspace.package]
version = "0.1.0"
authors = ["David G Horsman <david_horsman@hotmail.com>"]
description = "clipboard with history and catagories"
documentation = "https://example.com/clipmdplus"

[workspace.dependencies]
clipmdplus = { version = "0.1.0", path = "./clipmdplus" }
clipmdplusmacro = { version = "0.1.0", path = "./clipmdplusmacro" }


[workspace.metadata.webcontents]
root = "path/to/webproject"
tool = ["npm", "run", "build"]
#