[package]
name = "clipmdplus"
version = "0.1.0"
authors = ["David G Horsman <david_horsman@hotmail.com>"]
# build = "build.rs"
# documentation = "https://docs.rs/kclipmdplusbil"
edition = "2021"
exclude = [
    "target",
    "ignore",
    "CHANGELOG.md",
    "image.png",
    "Cargo.lock",
]
# license = "PROPRIETARY"
license-file = "clipmdplus_license.txt"
keywords = ["clipboard", "copy", "cut", "paste", "clippings", "ETL", "Windows", "Linux"]
# readme = "README.md"
# repository = ?

# version.workspace = true
# authors.workspace = true
# description.workspace = true
# documentation.workspace = true

default-run = "clipmdplus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Metadata used when generating an Android APK, for example.
[package.metadata.android]
package-name = "my-awesome-android-app"
assets = "path/to/static"

[[bin]]
name = "clipmdplus"
path = "src/main.rs"

[lib]
name = "clipmdpluslib"
path = "src/lib.rs"
# crate-type = ["proc-macro"]
# crate-type = ["cdylib", "rlib"]
proc-macro = true


# [build-dependencies]
# clipmdplusmacro.workspace = true

[dependencies]
clipmdplusmacro = {version = "0.1.0", path = "..\\clipmdplusmacro" , workspace = true }

blob = "0.3.0"
chrono = {version = "0.4.23", features = ["serde"]}
libc = "0.2.141"
postgres = "0.19.4"
# http / json
reqwest = {version = "0.11.18", features = ["json"]}

# Serialization
serde = {version = "1.0.160", features = ["derive", "rc"]}
serde-enum = "0.1.4" 
serde-enum-str = "0.3.2"
serde_json = "1.0.96"

# System
sled = "0.34.6"
sys = "0.0.0"
thiserror = "1.0.40"
# async
lazy_static = "1.4.0"
tokio = { version = "1.28.2", features = ["full"] }

# UI start.
egui = { version = "0.22.0"} 
# , features = ["provide_any"] }
# enum_derive = "0" can't have payloads
eframe = "0.22.0"
# egui_web = "0.17.0"
# UI end.

# Proc Macro
derive_more = "0.99.17"
# derive-name = "0.1.2"
proc-macro2 = "1.0.60"
syn = "2.0.18"
quote = "1.0.28"

# Windows:# OS
[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
# Development:
[dev-dependencies]

# [maybe]
# Command-line argument parsing 	clap = "2.25.0" 	📖 **
# Global initialization 	lazy_static = "0.2.8" 	📖
# Random numbers 	rand = "0.3.15" 	📖
# Tar archives 	tar = "0.4.23" 	📖
# Temporary directories 	tempdir = "0.3.5" 	📖
# Thread pool 	threadpool = "1.4.0" 	📖
# Configuration files 	toml = "0.4.2" 	📖
# URLs 	url = "1.5.1" 	📖
# Directory traversal 	walkdir = "1.0.7" 	📖

# [Unused]
# ansi_escapes = "0"
# ansi_escape = "0"
# local-ip-address = "0.5.1"
# whoami = "1.4.0"
# sys = "0"
# term_cursor = "0.2.1"
# mtermion = { path = "..\\mtermion_2.0.1" }
# mtermion = { path = "G:\\KBil23\\Code\\Vs\\Vs0\\mtermion_2.0.1" }
# extra = "0.1.0"
