[package]
name = "clipmdplus_macro"
version = "0.1.0"
authors = ["David G Horsman <david_horsman@hotmail.com>"]

# documentation = "https://docs.rs/clipmdplus_macro"
edition = "2021"
exclude = [
    "target",
    "ignore",
    "CHANGELOG.md",
    "image.png",
    "Cargo.lock",
]
# license = "PROPRIETARY"
license-file = "clipmdplus_license.txt"
keywords = ["clipboard", "copy", "cut", "paste", "clippings", "ETL", "Windows", "Linux"]
# readme = "README.md"
# repository = ?

[lib]
name = "clipmdplus_macro"
proc-macro = true

# [features]
# default = ["console_error_panic_hook"]
# # bottom of this doc

[package.metadata.docs.rs]
features = ["document-features"]
# features = ["document-features"]
#

# [features]
# Item_name = []
# variant_name = []
# default = ["Item_name", "variant_name"]

# [[test]]
# name = "lib"
# path = "tests/lib.rs"
# required-features = ["Item_name", "variant_name"]

# [[test]]
# name = "Item_name"
# path = "tests/name.rs"
# required-features = ["Item_name"]

# [[test]]
# name = "variant_name"
# path = "tests/variant_name.rs"
# required-features = ["variant_name"]

# [dependencies.convert_case]
# version = "0.4"
# # version = "0.4"
# optional = true

[dependencies]
derive_more = {workspace = true }
# derive_more = {version = "0.99.17", workspace = true, path = "..\\derive_more" }

### external crates
document-features = { version = "0.2.7" , optional = true }

# Serialization
serde = {version = "1.0.164", features = ["derive", "rc"]}
serde-enum = "0.1.4" 
serde-enum-str = "0.4.0"
serde_json = "1.0.97"

# System
thiserror = "1.0.40"

# async
lazy_static = "1.4.0"
tokio = { version = "1.28.2", features = ["full"] }

# Proc Macro
#! derive_more = "0.99.17" local copy in use
# derive-name = "0.1.2"
proc-macro2 = "1.0.60"
syn = "2.0.18"
quote = "1.0.28"
#
